# Equatotial

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  bsp.c  bsp.h  coordinate.c  coordinate.h  equatotial.c  motor.c  motor.h  oled.c  oled.h  oledfont.h  wifi.c  wifi.h
