set(srcs
	"csrc/mui.c"
	"csrc/mui_u8g2.c"
	"csrc/u8g2_bitmap.c"
	"csrc/u8g2_box.c"
	"csrc/u8g2_buffer.c"
	"csrc/u8g2_button.c"
	"csrc/u8g2_circle.c"
	"csrc/u8g2_cleardisplay.c"
	"csrc/u8g2_d_memory.c"
	"csrc/u8g2_d_setup.c"
	"csrc/u8g2_font.c"
	"csrc/u8g2_fonts.c"
	"csrc/u8g2_hvline.c"
	"csrc/u8g2_input_value.c"
	"csrc/u8g2_intersection.c"
	"csrc/u8g2_kerning.c"
	"csrc/u8g2_line.c"
	"csrc/u8g2_ll_hvline.c"
	"csrc/u8g2_message.c"
	"csrc/u8g2_polygon.c"
	"csrc/u8g2_selection_list.c"
	"csrc/u8g2_setup.c"
	"csrc/u8log.c"
	"csrc/u8log_u8g2.c"
	"csrc/u8log_u8x8.c"
	"csrc/u8x8_8x8.c"
	"csrc/u8x8_byte.c"
	"csrc/u8x8_cad.c"
	"csrc/u8x8_capture.c"
	"csrc/u8x8_d_a2printer.c"
	"csrc/u8x8_debounce.c"
	"csrc/u8x8_display.c"
	"csrc/u8x8_d_ssd1306_128x64_noname.c"
	"csrc/u8x8_fonts.c"
	"csrc/u8x8_gpio.c"
	"csrc/u8x8_input_value.c"
	"csrc/u8x8_message.c"
	"csrc/u8x8_selection_list.c"
	"csrc/u8x8_setup.c"
	"csrc/u8x8_string.c"
	"csrc/u8x8_u16toa.c"
	"csrc/u8x8_u8toa.c"
	"equatotial.c" 
	"bsp.c" 
	"oled.c"
	"motor.c")

idf_component_register(SRCS "wifi.c" "coordinate.c" "${srcs}"
                    INCLUDE_DIRS "." "./")

